--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "firebase": "^11.7.1",
     "fontawesome": "^5.6.3",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-firebase-hooks": "^5.1.1",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
