--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
