--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-tailwind/react": "^2.1.10",
     "firebase": "^11.7.1",
     "fontawesome": "^5.6.3",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.1",
@@ -27,7 +28,8 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
