--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-college-website",
+  "name": "cyberguardian-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@remix-run/router": "^1.23.0",
     "firebase": "^11.7.1",
     "fontawesome": "^5.6.3",
     "lucide-react": "^0.511.0",
@@ -27,13 +28,13 @@
     "react-firebase-hooks": "^5.1.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.26.1",
+    "react-router-dom": "^6.30.1",
     "react-scroll": "^1.9.3",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -45,7 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.1"
   }
 }
