--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@remix-run/router": "^1.23.0",
+    "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "fontawesome": "^5.6.3",
     "lucide-react": "^0.511.0",
