--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
     "recharts": "^2.15.3"
   },
@@ -46,7 +47,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.1"
   }
