--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
