--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,41 @@
 {
+
   "name": "backend",
+
   "version": "1.0.0",
+
   "main": "index.js",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node server.js"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "description": "",
+
   "dependencies": {
+
     "cors": "^2.8.5",
+
     "dotenv": "^16.5.0",
+
     "express": "^5.1.0",
+
     "firebase": "^11.8.1",
+
     "firebase-admin": "^13.4.0",
+
     "square": "^36.0.0"
+
   }
+
 }
+
