--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.7.1",
     "fontawesome": "^5.6.3",
+    "libphonenumber-js": "^1.12.9",
     "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.2.0",
