--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cyberguardian-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "NODE_ENV=production vite build",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -21,7 +21,6 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.7.1",
-    "fontawesome": "^5.6.3",
     "libphonenumber-js": "^1.12.9",
     "lucide-react": "^0.511.0",
     "react": "^18.3.1",
@@ -29,10 +28,8 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-firebase-hooks": "^5.1.1",
-    "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "^0.0.0",
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
@@ -45,11 +42,11 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
+    "cssnano": "^6.0.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
