--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "scripts": {
 
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "start": "node server.js",
+
     "dev": "nodemon server.js"
 
   },
@@ -26,13 +28,15 @@
 
     "cors": "^2.8.5",
 
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
 
     "express": "^5.1.0",
 
     "firebase": "^11.8.1",
 
     "firebase-admin": "^13.4.0",
+
+    "nodemailer": "^7.0.5",
 
     "square": "^36.0.0"
 
